# hermes-mychatarchive

./: .gitignore  README.md  pyproject.toml
hermes_mychatarchive/: install.py
tests/: test_plugin.py
